--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -18,7 +18,7 @@
 
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <img src="/img/logo.svg" width="229" height="68" alt="Cooking Blog - Made with Node.js">
+        <img src="/img/logo.jpg" width="150" height="150" alt="Cooking Blog - Made with Node.js">
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -40,7 +40,7 @@
     </main>
 
     <footer class="py-5">
-      <p>Build by Raddy</p>
+      <p>Build by Devit</p>
     </footer>
 
   </div>
